# rusty-duplication

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: publish.yml
examples/: basics.rs  png.rs  shared_memory.rs
src/: capturer.rs  duplicate_context.rs  duplication_context.rs  error.rs  ext.rs  lib.rs  main.rs  manager.rs  model.rs  monitor.rs  scanner.rs  utils.rs
src/capturer/: custom.rs  model.rs  shared.rs  simple.rs  vec.rs
src/duplication_context/: factory.rs
src/monitor/: factory.rs
