[package]
name = "rusty-duplication"
version = "0.4.5"
edition = "2021"
license = "MIT"
authors = ["DiscreteTom <discrete_tom@outlook.com>"]
description = "Capture the screen on Windows using the Desktop Duplication API in Rust, with shared memory support."
repository = "https://github.com/DiscreteTom/rusty-duplication"
keywords = ["shared-memory", "desktop-duplication", "windows"]


[dependencies]
windows = { version = "0.48.0", features = ["Win32_Graphics_Dxgi", "Win32_Graphics_Direct3D11", "Win32_Foundation", "Win32_Graphics_Direct3D", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Gdi", "Win32_System_Memory", "Win32_Security"] }
